[package]
name = "dbase"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = "0.37.0"

#########
#utility
#########
cfg-if = "1.0.0"
macro-bits = "0.1.4"
bitflags ="2.8.0"
rccell = "0.1.3"
ansiterm = "0.12.1"

[features]

##########  OpenGL  ##########
backend_opengl = []

##########  Vulkan  ##########
backend_vulkan = []