[package]
name = "dbase"
version = "0.1.0"
edition = "2021"

[dependencies]
##########  Core       ##########
sdl2 = {version = "0.37.0", features = ["bundled","raw-window-handle"]}
ash = {version = "0.38.0+1.3.281",features = ["linked"]}

##########  Utilities  ##########
cfg-if = "1.0.0"
macro-bits = "0.1.5"
bitflags ="2.8.0"
rccell = "0.1.3"
ansiterm = "0.12.2"
